- 1.2.?? (?????????)
  * Added support to scrobble only when on certain types of network (3G, Wifi, etc.)
  * Minor bug-fixes

- 1.2.7  (2010-03-01)
  * Minor bug-fixes

- 1.2.6  (2010-01-31)
  * Handles scrobbling from built-in music apps better

- 1.2.5  (2010-01-27)
  * New icon by Tha PHLASH

- 1.2.4  (2010-01-22)
  * Fixed bug where SLS would crash if you hadn't scrobbled all your cached tracks before upgrading to 1.2.3

- 1.2.3  (2010-01-22)
  * Implemented an API for new music apps
  * Now detects music apps that can scrobble through SLS automatically
  * Added link to profile page in the status screen

- 1.2.1  (2009-12-18)
  * Small bugfixes, removed (stupid) username length limit

- 1.2    (2009-12-06)
  * Added support for the Scrobble Droid API - can now scrobble for all apps that can scrobble through Scrobble Droid.
  * Changes to the options screen: more battery / plugged in settings + more

- 1.1.10 (2009-11-25)
  * Added advanced option to always submit when plugged to a power source
  * Fixed (for the second time, sorry) a bug where SLS would crash when interrupted by other apps

- 1.1.9  (2009-09-27)
  * Can now view and edit scrobble cache
  * GUI improvements

- 1.1.7  (2009-09-22)
  * Added advanced options to not scrobble immediately
  * Added options to conserve battery

- 1.1.5  (2009-09-19)
  * Added support to scrobble to Libre.fm

- 1.1    (2009-09-14)
  * Major architectural overhaul
  * Handles offline mode better, scrobbles will be submitted immediately when the phone comes online again
  * These change notes
  * The about screen

- 1.0.2  (2009-09-11)
  * Fixed a bug where a crash would occur if you unmounted/re-mounted the sd-card

- 1.0.1  (2009-08-27)
  * Added support for HTC Hero

- 1.0    (2009-08-24)
  * First release!
  * Supports scrobbling and now-playing notifications from the default android music app
  * Scrobbles are cached if they can't be submitted right away
  * Starts automatically when music is played