@@ -19,11 +19,14 @@
 
 package com.adam.aslfms;
 
+import android.app.AlertDialog;
 import android.app.ListActivity;
 import android.content.BroadcastReceiver;
 import android.content.Context;
+import android.content.DialogInterface;
 import android.content.Intent;
 import android.content.IntentFilter;
+import android.content.DialogInterface.OnClickListener;
 import android.database.Cursor;
 import android.os.Bundle;
 import android.util.Log;
@@ -41,19 +44,23 @@ import android.widget.AdapterView.AdapterContextMenuInfo;
 
 import com.adam.aslfms.service.NetApp;
 import com.adam.aslfms.service.ScrobblingService;
+import com.adam.aslfms.util.AppSettings;
 import com.adam.aslfms.util.ScrobblesDatabase;
 import com.adam.aslfms.util.Track;
 import com.adam.aslfms.util.Util;
-import com.adam.aslfms.util.ScrobblesDatabase.SortOrder;
+import com.adam.aslfms.util.AppSettingsEnums.SortField;
 
 public class ViewScrobbleCacheActivity extends ListActivity {
 	private static final String TAG = "VSCacheActivity";
 
 	private static final int MENU_SCROBBLE_NOW_ID = 0;
 	private static final int MENU_CLEAR_CACHE_ID = 1;
+	private static final int MENU_CHANGE_SORT_ORDER_ID = 2;
 
 	private static final int CONTEXT_MENU_DETAILS_ID = 0;
 	private static final int CONTEXT_MENU_DELETE_ID = 1;
+
+	private AppSettings settings;
 
 	private ScrobblesDatabase mDb;
 	/**
@@ -63,8 +70,12 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 
 	private Cursor mScrobblesCursor = null;
 
+	private TextView mSortHeaderTextView;
+
 	public void onCreate(Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
+
+		settings = new AppSettings(this);
 
 		Bundle extras = getIntent().getExtras();
 
@@ -85,6 +96,11 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 
 		setTitle(getString(R.string.view_sc_title_for).replaceAll("%1", name));
 		setContentView(R.layout.scrobble_cache_list);
+
+		View header = getLayoutInflater().inflate(
+				R.layout.scrobble_cache_header, null);
+		mSortHeaderTextView = (TextView) header.findViewById(R.id.sort_title);
+		getListView().addHeaderView(header);
 
 		mDb = new ScrobblesDatabase(this);
 		mDb.open();
@@ -118,16 +134,27 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 		registerReceiver(onChange, ifs);
 	}
 
+	private void refillData() {
+		if (mScrobblesCursor != null) {
+			stopManagingCursor(mScrobblesCursor);
+			mScrobblesCursor.close();
+		}
+		fillData();
+	}
+
 	private void fillData() {
+		SortField sf = settings.getCacheSortField();
 		if (mNetApp == null) {
-			mScrobblesCursor = mDb.fetchAllTracksCursor(SortOrder.DESCENDING);
+			mScrobblesCursor = mDb.fetchAllTracksCursor(sf);
 		} else {
-			mScrobblesCursor = mDb.fetchTracksCursor(mNetApp,
-					SortOrder.DESCENDING);
+			mScrobblesCursor = mDb.fetchTracksCursor(mNetApp, sf);
 		}
 		startManagingCursor(mScrobblesCursor);
 		CursorAdapter adapter = new MyAdapter(this, mScrobblesCursor);
 		setListAdapter(adapter);
+
+		mSortHeaderTextView.setText(getString(R.string.sc_sorted_by)
+				.replaceAll("%1", sf.getName(this)));
 	}
 
 	@Override
@@ -135,6 +162,7 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 		boolean ret = super.onCreateOptionsMenu(menu);
 		menu.add(0, MENU_SCROBBLE_NOW_ID, 0, R.string.scrobble_now);
 		menu.add(0, MENU_CLEAR_CACHE_ID, 0, R.string.clear_cache);
+		menu.add(0, MENU_CHANGE_SORT_ORDER_ID, 0, R.string.sc_sortorder_change);
 		return ret;
 	}
 
@@ -159,6 +187,9 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 			}
 
 			return true;
+		case MENU_CHANGE_SORT_ORDER_ID:
+			viewChangeSortOrder();
+			return true;
 		}
 		return super.onOptionsItemSelected(item);
 	}
@@ -166,10 +197,12 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 	@Override
 	public void onCreateContextMenu(ContextMenu menu, View v,
 			ContextMenuInfo menuInfo) {
+		AdapterContextMenuInfo info = (AdapterContextMenuInfo) menuInfo;
+		if (info.id < 0)
+			return;
 		super.onCreateContextMenu(menu, v, menuInfo);
 		menu.add(0, CONTEXT_MENU_DETAILS_ID, 0, R.string.view_sc_details);
 		menu.add(0, CONTEXT_MENU_DELETE_ID, 0, R.string.delete_sc);
-
 	}
 
 	@Override
@@ -197,7 +230,39 @@ public class ViewScrobbleCacheActivity extends ListActivity {
 	@Override
 	protected void onListItemClick(ListView l, View v, int position, long id) {
 		super.onListItemClick(l, v, position, id);
-		viewSCDetails((int) id);
+		if (id == -1) {
+			viewChangeSortOrder();
+		} else {
+			viewSCDetails((int) id);
+		}
+	}
+
+	private void viewChangeSortOrder() {
+		int selected = 0;
+		SortField selSf = settings.getCacheSortField();
+		SortField[] sfArr = SortField.values();
+		for (int i = 0; i < sfArr.length; i++) {
+			if (sfArr[i] == selSf) {
+				selected = i;
+				break;
+			}
+		}
+
+		AlertDialog.Builder adBuilder = new AlertDialog.Builder(this).setTitle(
+				R.string.sc_sort_title).setSingleChoiceItems(
+				SortField.toCharSequenceArray(this), selected,
+				new OnClickListener() {
+					@Override
+					public void onClick(DialogInterface dialog, int which) {
+						SortField sf = SortField.values()[which];
+						settings.setCacheSortField(sf);
+						refillData();
+						mScrobblesCursor.requery();
+						dialog.dismiss();
+					}
+				});
+
+		adBuilder.show();
 	}
 
 	private void viewSCDetails(int id) {
